# maze

./: README.md
maze-cli/: .gitignore  Cargo.toml  LICENSE  README.md
maze-cli/src/: main.rs  utils.rs
maze-cli/testdata/: k-2.srs  proof1.json  proof2.json  proofs.json  public1.json  public2.json  public_signals.json  verification_key.json
