[package]
name = "maze"
version = "0.1.0"
authors = ["Janmajaya Mall <janmajayamall@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Tool to aggregate snarkjs circom plonk proofs"
readme = "README.md"
keywords = ["aggregation", "plonk", "halo2", "circom"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.8"
rand = "0.8"
rand_chacha = "0.3.1"
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.85" }
anyhow = { version = "1.0.65" }
colored = "2.0.0"

ethereum_types = { package = "ethereum-types", version = "0.14.1", default-features = false, features = ["std"]}
sha3 = { version = "0.10.1" }

foundry_evm = { git = "https://github.com/foundry-rs/foundry", package = "foundry-evm", rev = "1d9a34ecfe265d49b4237c9eb670d5aec389b646" }
crossterm = { version = "0.22.1" }
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }

plonk_verifier = {git = "https://github.com/Janmajayamall/plonk-verifier.git", branch="feature/system-circom-cli"}

halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.2.1", package = "halo2curves" }

halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_09_10" }


halo2_wrong_ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2022_09_09", package = "ecc" }
halo2_wrong_transcript = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2022_09_09", package = "transcript"}
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", branch = "padding" }

halo2_kzg_srs = { git = "https://github.com/han0110/halo2-kzg-srs", rev="ff65429" }
