[package]
name = "maze"
version = "0.1.0"
authors = ["Janmajaya Mall <janmajayamall@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Tool to aggregate snarkjs circom plonk proofs"
readme = "README.md"
keywords = ["aggregation", "plonk", "halo2", "circom"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.7", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3.1"
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.85" }
anyhow = { version = "1.0.65" }
colored = "2.0.0"

ethereum_types = { package = "ethereum-types", version = "0.14.1", default-features = false, features = ["std"]}
sha3 = { version = "0.10.1" }

crossterm = { version = "0.22.1" }
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }

snark_verifier = { git = "https://github.com/jeong0982/snark-verifier" }

halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.1", package = "halo2curves" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02" }
halo2_wrong_ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_02_02", package = "ecc" }

poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", tag = "v2022_10_22"}

halo2_kzg_srs = { git = "https://github.com/han0110/halo2-kzg-srs", rev="d6929c7" }
